troca de serviço do express para createServer do http

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     </form>
 
     <!--  socket io  -->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
     <script>
     $(function(){
         let socket = io();
